--- a/예제/예제 04-02/.project
+++ b/예제/예제 04-02/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>실습 04-05</name>
+	<name>예제 04-02</name>
 	<comment></comment>
 	<projects>
 	</projects>
